# pancake

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.sqlx/: initialize.sql  query-0baf35ecf3d3faf9343b8ed5cb02530529f124181321e655bfecc5b377363628.json  query-1c1a7d2d85bffdb038513180ac574ee541347e2052f54709a7305eeea5679c8c.json  query-2723578d16dca08cd6b28337fb84114ff7dde96144e58b9c5317fb069dbdb2a1.json  query-5a03316f766bca0b35ce117ff784c0cb6b7aba29497a805ddfcf6bdd71145cab.json  query-d92f9c37729be5ad68554ad7c4b438bb0c264cb5c45735c0274980684f6ef652.json
requests/: account.http  index.http
resources/: README.txt  private-key.pem
src/: constants.rs  lib.rs  main.rs  utils.rs
src/db/: mod.rs
src/guards/: device_id.rs  ip_address.rs  mod.rs
src/routes/: account.rs  mod.rs
src/routes/hk4e/: mod.rs  shield.rs
